fixed overlap problem

--- a/components/profileHeader/profileHeader.module.scss
+++ b/components/profileHeader/profileHeader.module.scss
@@ -77,12 +77,13 @@
     position: absolute;
     height: 40px;
     width: 40px;
-    bottom: 5px;
-    right: 20px;
+    bottom: 40px;
+    right: -10px;
     min-width: auto;
     padding: 0;
     border-radius: 50%;
     background-color: rgba(white, 0.7);
+    z-index: 999;
 }
 
 .edit__name {
